--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" ng-app="App">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,9 +9,13 @@
   </head>
   <body>
 
+  <div ng-view class="container"></div>
     <script type="text/javascript" src="../libs/jquery/jquery-1.12.1.min.js"></script>
     <script src="../libs/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../libs/angular/angular.min.js"></script>
     <script type="text/javascript" src="../libs/angular/angular-route.min.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/controller.js"></script>
+    <script type="text/javascript" src="js/route.js"></script>
   </body>
 </html>
